Basics are Done

--- a/ENIGMAxVSSUT/index.html
+++ b/ENIGMAxVSSUT/index.html
@@ -2,12 +2,114 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="shortcut icon" href="enigmaLogo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="stylesheet" href="/src/index.css">
+    <title>ENIGMAxVSSUT</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <section class="hero">
+      <h1>Enigma</h1>
+      <p>The Official Coding Club of VSSUT, Burla</p>
+    </section>
+
+    <section class="sticky-cards">
+      <div class="card" id="card-1">
+        <div class="card-inner">
+          <div class="card-info">
+            <p>A surreal dive into neon hues and playful decay</p>
+          </div>
+          <div class="card-title">
+            <h1>Reveries</h1>
+          </div>
+          <div class="card-description">
+            <p>A psychedlic skull study exploring the tension between playfulness and decay. Bold candy tones, liquid forms, and crips vectors brings a surreal, pop-art mood meant for covers and prints.</p>
+          </div>
+          <div class="card-img">
+            <img src="/img/puri.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
+      <div class="card" id="card-2">
+        <div class="card-inner">
+          <div class="card-info">
+            <p>A surreal dive into neon hues and playful decay</p>
+          </div>
+          <div class="card-title">
+            <h1>Reveries</h1>
+          </div>
+          <div class="card-description">
+            <p>A psychedlic skull study exploring the tension between playfulness and decay. Bold candy tones, liquid forms, and crips vectors brings a surreal, pop-art mood meant for covers and prints.</p>
+          </div>
+          <div class="card-img">
+            <img src="/img/lap-cof.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
+      <div class="card" id="card-3">
+        <div class="card-inner">
+          <div class="card-info">
+            <p>A surreal dive into neon hues and playful decay</p>
+          </div>
+          <div class="card-title">
+            <h1>Reveries</h1>
+          </div>
+          <div class="card-description">
+            <p>A psychedlic skull study exploring the tension between playfulness and decay. Bold candy tones, liquid forms, and crips vectors brings a surreal, pop-art mood meant for covers and prints.</p>
+          </div>
+          <div class="card-img">
+            <img src="/img/hacker-mask.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
+      <div class="card" id="card-4">
+        <div class="card-inner">
+          <div class="card-info">
+            <p>A surreal dive into neon hues and playful decay</p>
+          </div>
+          <div class="card-title">
+            <h1>Reveries</h1>
+          </div>
+          <div class="card-description">
+            <p>A psychedlic skull study exploring the tension between playfulness and decay. Bold candy tones, liquid forms, and crips vectors brings a surreal, pop-art mood meant for covers and prints.</p>
+          </div>
+          <div class="card-img">
+            <img src="/img/konark.jpg" alt="">
+          </div>
+        </div>
+      </div>  
+    </section>
+
+    <section class="banner">
+      <div class="banner-img-container">
+        <div class="img"><img src="/img/img-hoodie.jpg" alt=""></div>
+        <div class="img mask"><img src="/img/img-hoodie.jpg" alt=""></div>
+        <div class="img mask"><img src="/img/img-hoodie.jpg" alt=""></div>
+        <div class="img mask"><img src="/img/img-hoodie.jpg" alt=""></div>
+        <div class="img mask"><img src="/img/img-hoodie.jpg" alt=""></div>
+        <div class="img mask"><img src="/img/img-hoodie.jpg" alt=""></div>
+        <div class="img mask"><img src="/img/img-hoodie.jpg" alt=""></div>
+        
+
+      </div>
+      <div class="banner-header">
+          <h1>Where! Skill is The GOAL</h1>
+        </div>
+
+        <div class="banner-intro-text-container">
+          <div class="banner-intro-text"><h1>Enigma</h1></div>
+          <div class="banner-intro-text"><h1>VSSUT</h1></div>
+        </div>
+    </section>
+
+
+    <section class="outro">
+      <h1>Since 2014</h1>
+    </section>
+
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
