TSL in Intro Page

--- a/ENIGMAxVSSUT/index.html
+++ b/ENIGMAxVSSUT/index.html
@@ -11,6 +11,7 @@
     <section class="hero">
       <h1>Enigma</h1>
       <p>The Official Coding Club of VSSUT, Burla</p>
+      <canvas id="introCanvas"></canvas>
     </section>
 
     <section class="sticky-cards">
