--- a/ENIGMAxVSSUT/index.html
+++ b/ENIGMAxVSSUT/index.html
@@ -18,16 +18,16 @@
       <div class="card" id="card-1">
         <div class="card-inner">
           <div class="card-info">
-            <p>A surreal dive into neon hues and playful decay</p>
+            <p>Our Domains</p>
           </div>
           <div class="card-title">
-            <h1>Reveries</h1>
+            <h1>WEB DEV</h1>
           </div>
           <div class="card-description">
-            <p>A psychedlic skull study exploring the tension between playfulness and decay. Bold candy tones, liquid forms, and crips vectors brings a surreal, pop-art mood meant for covers and prints.</p>
+            <p>With us, explore the exciting world of Web Development, where creativity meets technology! Build stunning websites and interactive web apps.</p>
           </div>
           <div class="card-img">
-            <img src="/img/puri.jpg" alt="">
+            <img src="/img2/WebDev.jpg" alt="">
           </div>
         </div>
       </div>
@@ -35,13 +35,13 @@
       <div class="card" id="card-2">
         <div class="card-inner">
           <div class="card-info">
-            <p>A surreal dive into neon hues and playful decay</p>
+            <p>Our Domains</p>
           </div>
           <div class="card-title">
-            <h1>Reveries</h1>
+            <h1>Competitive Prog</h1>
           </div>
           <div class="card-description">
-            <p>A psychedlic skull study exploring the tension between playfulness and decay. Bold candy tones, liquid forms, and crips vectors brings a surreal, pop-art mood meant for covers and prints.</p>
+            <p>unleash your problem-solving power through Competitive Programming! Challenge yourself to solve complex coding problems under time pressure.</p>
           </div>
           <div class="card-img">
             <img src="/img/lap-cof.jpg" alt="">
@@ -52,16 +52,16 @@
       <div class="card" id="card-3">
         <div class="card-inner">
           <div class="card-info">
-            <p>A surreal dive into neon hues and playful decay</p>
+            <p>Our Domains</p>
           </div>
           <div class="card-title">
-            <h1>Reveries</h1>
+            <h1>Cyber Security</h1>
           </div>
           <div class="card-description">
-            <p>A psychedlic skull study exploring the tension between playfulness and decay. Bold candy tones, liquid forms, and crips vectors brings a surreal, pop-art mood meant for covers and prints.</p>
+            <p>dive into the world of Cyber Security—where you become the digital guardian! Learn to protect systems, networks, and data from cyber threats, outsmart hackers, and build strong defenses that keep information safe.</p>
           </div>
           <div class="card-img">
-            <img src="/img/hacker-mask.jpg" alt="">
+            <img src="/img2/CyberS.jpg" alt="">
           </div>
         </div>
       </div>
@@ -69,19 +69,71 @@
       <div class="card" id="card-4">
         <div class="card-inner">
           <div class="card-info">
-            <p>A surreal dive into neon hues and playful decay</p>
+            <p>Our Domains</p>
           </div>
           <div class="card-title">
-            <h1>Reveries</h1>
+            <h1>AI/ML</h1>
           </div>
           <div class="card-description">
-            <p>A psychedlic skull study exploring the tension between playfulness and decay. Bold candy tones, liquid forms, and crips vectors brings a surreal, pop-art mood meant for covers and prints.</p>
+            <p>We are passionate students who are dedicated to exploring the latest AI/ML technologies and techniques, from developing custom AI models to creating intelligent chatbots.</p>
           </div>
           <div class="card-img">
-            <img src="/img/konark.jpg" alt="">
+            <img src="/img2/AiMl.jpg" alt="">
           </div>
         </div>
-      </div>  
+      </div>
+
+      <div class="card" id="card-5">
+        <div class="card-inner">
+          <div class="card-info">
+            <p>Our Domains</p>
+          </div>
+          <div class="card-title">
+            <h1>App Dev</h1>
+          </div>
+          <div class="card-description">
+            <p>dive into the dynamic realm of App Development where innovation meets everyday convenience! Learn to design and build powerful mobile applications for smartphones and tablets that captivate users and solve real-world problems.</p>
+          </div>
+          <div class="card-img">
+            <img src="/img2/AppDev.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
+      <div class="card" id="card-6">
+        <div class="card-inner">
+          <div class="card-info">
+            <p>Our Domains</p>
+          </div>
+          <div class="card-title">
+            <h1>UI/UX</h1>
+          </div>
+          <div class="card-description">
+            <p>Explore the world of user interface and user experience design. Gain hands-on experience in UI/UX, from designing user-friendly interfaces to creating engaging user experiences.</p>
+          </div>
+          <div class="card-img">
+            <img src="/img2/UI.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
+      <div class="card" id="card-7">
+        <div class="card-inner">
+          <div class="card-info">
+            <p>Our Domains</p>
+          </div>
+          <div class="card-title">
+            <h1>Game Dev</h1>
+          </div>
+          <div class="card-description">
+            <p>Explore the world of user interface and user experience design. Gain hands-on experience in UI/UX, from designing user-friendly interfaces to creating engaging user experiences.</p>
+          </div>
+          <div class="card-img">
+            <img src="/img2/GameDev.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
     </section>
 
     <section class="banner">
