OutroEffects using Shaders

--- a/ENIGMAxVSSUT/index.html
+++ b/ENIGMAxVSSUT/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
 
-      <div class="card" id="card-2">
+      <!-- <div class="card" id="card-2">
         <div class="card-inner">
           <div class="card-info">
             <p>Our Domains</p>
@@ -47,7 +47,7 @@
             <img src="/img/lap-cof.jpg" alt="">
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="card" id="card-3">
         <div class="card-inner">
@@ -100,7 +100,7 @@
         </div>
       </div>
 
-      <div class="card" id="card-6">
+      <!-- <div class="card" id="card-6">
         <div class="card-inner">
           <div class="card-info">
             <p>Our Domains</p>
@@ -115,7 +115,7 @@
             <img src="/img2/UI.jpg" alt="">
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="card" id="card-7">
         <div class="card-inner">
@@ -156,11 +156,14 @@
           <div class="banner-intro-text"><h1>Enigma</h1></div>
           <div class="banner-intro-text"><h1>VSSUT</h1></div>
         </div>
+
     </section>
 
 
     <section class="outro">
       <h1>Since 2014</h1>
+      <canvas id="outroCanvas"></canvas>
+
     </section>
 
     <script type="module" src="/src/main.js"></script>
