--- a/ENIGMAxVSSUT/index.html
+++ b/ENIGMAxVSSUT/index.html
@@ -138,23 +138,23 @@
 
     <section class="banner">
       <div class="banner-img-container">
-        <div class="img"><img src="/img/img-hoodie.jpg" alt=""></div>
-        <div class="img mask"><img src="/img/img-hoodie.jpg" alt=""></div>
-        <div class="img mask"><img src="/img/img-hoodie.jpg" alt=""></div>
-        <div class="img mask"><img src="/img/img-hoodie.jpg" alt=""></div>
-        <div class="img mask"><img src="/img/img-hoodie.jpg" alt=""></div>
-        <div class="img mask"><img src="/img/img-hoodie.jpg" alt=""></div>
-        <div class="img mask"><img src="/img/img-hoodie.jpg" alt=""></div>
+        <div class="img"><img src="/img2/lap.jpg" alt=""></div>
+        <div class="img mask"><img src="/img2/lap.jpg" alt=""></div>
+        <div class="img mask"><img src="/img2/lap.jpg" alt=""></div>
+        <div class="img mask"><img src="/img2/lap.jpg" alt=""></div>
+        <div class="img mask"><img src="/img2/lap.jpg" alt=""></div>
+        <div class="img mask"><img src="/img2/lap.jpg" alt=""></div>
+        <div class="img mask"><img src="/img2/lap.jpg" alt=""></div>
         
 
       </div>
       <div class="banner-header">
-          <h1>Where! Skill is The GOAL</h1>
+          <h1>Skill is The ultimate GOAL</h1>
         </div>
 
         <div class="banner-intro-text-container">
-          <div class="banner-intro-text"><h1>Enigma</h1></div>
-          <div class="banner-intro-text"><h1>VSSUT</h1></div>
+          <div class="banner-intro-text"><h1>Place</h1></div>
+          <div class="banner-intro-text"><h1>Where</h1></div>
         </div>
 
     </section>
