improve banner page by adding imgages

--- a/ENIGMAxVSSUT/index.html
+++ b/ENIGMAxVSSUT/index.html
@@ -157,6 +157,30 @@
           <div class="banner-intro-text"><h1>Where</h1></div>
         </div>
 
+        <div class="img-for-page">
+          <div class="scatter-img" id="img1"><img src="/img2/WebDev.jpg" alt=""></div>
+        </div>
+
+        <div class="img-for-page">
+          <div class="scatter-img" id="img2"><img src="/img2/CyberS.jpg" alt=""></div>
+        </div>
+
+        <div class="img-for-page">
+          <div class="scatter-img" id="img3"><img src="/img2/AiMl.jpg" alt=""></div>
+        </div>
+
+        <div class="img-for-page">
+          <div class="scatter-img" id="img4"><img src="/img2/AppDev.jpg" alt=""></div>
+        </div>
+
+        <div class="img-for-page">
+          <div class="scatter-img" id="img5"><img src="/img2/GameDev.jpg" alt=""></div>
+        </div>
+
+        <div class="img-for-page">
+          <div class="scatter-img" id="img6"><img src="/img2/UI.jpg" alt=""></div>
+        </div>
+
     </section>
 
 
