Added stay page.

--- a/ENIGMAxVSSUT/index.html
+++ b/ENIGMAxVSSUT/index.html
@@ -136,6 +136,47 @@
 
     </section>
 
+    <section class="stay">
+      <div class="stay-container">
+      <div class="stay-left">
+        <div class="stay-page">
+          <h2>Projects</h2>
+          <p>With Enigma, explore a diverse range of innovative Projects crafted by our talented members! From creative coding challenges to impactful real-world solutions, our projects demonstrate teamwork, skill, and passion. Join us to learn, create, and showcase your own groundbreaking projects!</p>
+        </div>
+        <div class="stay-page">
+          <h2>VSIEGE</h2>
+          <p>Vsiege is an exciting multiplayer game where players choose their loadout, spawn with their team, and work together to hunt down enemies. Use strategic cover, coordinate with teammates, and outsmart opponents to win the match. Track your performance and stats as you climb the leaderboard in this thrilling team-based shooter!</p>
+        </div>
+        <div class="stay-page">
+          <h2>WMS</h2>
+          <p>WMS is an innovative waste management system featuring a real-time dustbin tracker website. It promotes efficient waste disposal and monitoring, helping to keep the university environment cleaner and more sustainable. Join us in making a positive impact through smart technology!</p>
+        </div>
+        <div class="stay-page">
+          <h2>SMS</h2>
+          <p>SMS is VSSUT’s Student Management System app designed to enhance connectivity and streamline student information management. It simplifies access to important data, making campus life more organized and efficient for everyone. Join us in transforming student services with smart technology!</p>
+        </div>
+        <div class="stay-page">
+          <h2>Schedule</h2>
+          <p>Schedule is a user-friendly app designed to efficiently manage tasks and streamline your daily organization. Boost productivity and enjoy stress-free planning with intuitive features that keep you on track effortlessly. Join us to master time management through smart technology!</p>
+        </div>
+        <div class="stay-page">
+          <h2>Ritrovo</h2>
+          <p>Ritrovo unifies all campus clubs and keeps students updated with the latest events. It revolutionizes attendance tracking, making university life more organized and enjoyable. Join us to connect, engage, and experience campus like never before!</p>
+        </div>
+      </div>
+      <div class="stay-right">
+        <div class="stay-images">
+          <img src="https://images.pexels.com/photos/1293261/pexels-photo-1293261.jpeg" alt="stay-Image 1">
+          <img src="https://enigma-dev-web.web.app/assets/image5.png" alt="stay-Image 2">
+          <img src="https://images.pexels.com/photos/4668363/pexels-photo-4668363.jpeg" alt="stay-Image 3">
+          <img src="https://images.pexels.com/photos/5922204/pexels-photo-5922204.jpeg" alt="stay-Image 4">
+          <img src="https://images.pexels.com/photos/707676/pexels-photo-707676.jpeg" alt="stay-Image 5">
+          <img src="https://images.pexels.com/photos/226737/pexels-photo-226737.jpeg" alt="stay-Image 6">
+        </div>
+      </div>
+    </div>
+    </section>
+
     <section class="banner">
       <div class="banner-img-container">
         <div class="img"><img src="/img2/lap.jpg" alt=""></div>
