Changed Intro page.

--- a/ENIGMAxVSSUT/index.html
+++ b/ENIGMAxVSSUT/index.html
@@ -8,10 +8,16 @@
     <title>ENIGMAxVSSUT</title>
   </head>
   <body>
-    <section class="hero">
+    <!-- <section class="hero">
       <h1>Enigma</h1>
       <p>The Official Coding Club of VSSUT, Burla</p>
       <canvas id="introCanvas"></canvas>
+    </section> -->
+
+    <section class="hero">
+      <h1>Enigma</h1>
+      <p>The Official Coding Club of VSSUT, Burla</p>
+      <img src="https://images.pexels.com/photos/32393625/pexels-photo-32393625.jpeg" alt="">
     </section>
 
     <section class="sticky-cards">
