Added cursor in Hero page

--- a/ENIGMAxVSSUT/index.html
+++ b/ENIGMAxVSSUT/index.html
@@ -14,6 +14,8 @@
       <canvas id="introCanvas"></canvas>
     </section> -->
 
+    <div class="cursor">Scroll</div>
+
     <section class="hero">
       <h1>Enigma</h1>
       <p>The Official Coding Club of VSSUT, Burla</p>
@@ -182,6 +184,14 @@
       </div>
     </div>
     </section>
+
+    <!-- <section class="staypage">
+      <div class="stayContainer">
+        <img src="https://images.pexels.com/photos/1293265/pexels-photo-1293265.jpeg" alt="">
+        <h2 class="stay1">Projects</h2>
+        <div class="staymini"><img src="https://images.pexels.com/photos/1293261/pexels-photo-1293261.jpeg" alt=""></div>
+      </div>
+    </section> -->
 
     <section class="banner">
       <div class="banner-img-container">
