--- a/ENIGMAxVSSUT/index.html
+++ b/ENIGMAxVSSUT/index.html
@@ -147,9 +147,9 @@
     </section>
 
     <section class="do">
-        <h1>WHAT WE DO</h1>
+        <h1>What We Do</h1>
         <!-- <p>At Enigma, we bring together creative minds and tech enthusiasts to learn, build, and innovate! We explore cutting-edge domains like web development, app development, cybersecurity, and competitive programming. Through real-world projects, hands-on workshops, and collaborative teamwork, we empower students to master new technologies, solve real problems, and make a lasting impact on campus and beyond. Join us to level up your skills, unleash your curiosity, and shape the future together!</p> -->
-        <img src="https://images.pexels.com/photos/219692/pexels-photo-219692.jpeg" alt="">
+        <img src="https://images.pexels.com/photos/33412303/pexels-photo-33412303.jpeg" alt="">
     </section>
 
     <section class="stay">
@@ -160,15 +160,17 @@
                     <!-- <p>With Enigma, explore a diverse range of innovative Projects crafted by our talented members! From creative coding challenges to impactful real-world solutions, our projects demonstrate teamwork, skill, and passion. Join us to learn, create, and showcase your own groundbreaking projects!</p> -->
                 </div>
                 <div class="stay-page">
-                    <h2>VSIEGE</h2>
+                    <!-- <h2>VSIEGE</h2> -->
+                    <h2>Vsiege</h2>
                     <!-- <p>Vsiege is an exciting multiplayer game where players choose their loadout, spawn with their team, and work together to hunt down enemies. Use strategic cover, coordinate with teammates, and outsmart opponents to win the match. Track your performance and stats as you climb the leaderboard in this thrilling team-based shooter!</p> -->
                 </div>
                 <div class="stay-page">
-                    <h2>WMS</h2>
+                    <!-- <h2>WMS</h2> -->
+                    <h2>Wms</h2>
                     <!-- <p>WMS is an innovative waste management system featuring a real-time dustbin tracker website. It promotes efficient waste disposal and monitoring, helping to keep the university environment cleaner and more sustainable. Join us in making a positive impact through smart technology!</p> -->
                 </div>
                 <div class="stay-page">
-                    <h2>SMS</h2>
+                    <h2>Sms</h2>
                     <!-- <p>SMS is VSSUT’s Student Management System app designed to enhance connectivity and streamline student information management. It simplifies access to important data, making campus life more organized and efficient for everyone. Join us in transforming student services with smart technology!</p> -->
                 </div>
                 <div class="stay-page">
@@ -187,18 +189,18 @@
                     <img src="https://images.pexels.com/photos/4668363/pexels-photo-4668363.jpeg" alt="stay-Image 3">
                     <img src="https://images.pexels.com/photos/5922204/pexels-photo-5922204.jpeg" alt="stay-Image 4">
                     <img src="https://images.pexels.com/photos/707676/pexels-photo-707676.jpeg" alt="stay-Image 5">
-                    <img src="https://images.pexels.com/photos/3787840/pexels-photo-3787840.jpeg" alt="stay-Image 6">
+                    <img src="https://images.pexels.com/photos/33653821/pexels-photo-33653821.jpeg" alt="stay-Image 6">
                 </div>
             </div>
 
             <div class="stay-bg">
                 <div class="stay-bg-images">
-                    <img src="https://images.pexels.com/photos/1633970/pexels-photo-1633970.jpeg" alt="stay-bg-Image 1">
+                    <img src="https://images.pexels.com/photos/164357/pexels-photo-164357.jpeg" alt="stay-bg-Image 1">
                     <img src="https://images.pexels.com/photos/16297781/pexels-photo-16297781.jpeg" alt="stay-bg-Image 2">
                     <img src="https://images.pexels.com/photos/13292645/pexels-photo-13292645.jpeg" alt="stay-bg-Image 3">
                     <img src="https://images.pexels.com/photos/1816798/pexels-photo-1816798.jpeg" alt="stay-bg-Image 4">
                     <img src="https://images.pexels.com/photos/16061170/pexels-photo-16061170.jpeg" alt="stay-bg-Image 5">
-                    <img src="https://images.pexels.com/photos/887839/pexels-photo-887839.jpeg" alt="stay-bg-Image 6">
+                    <img src="https://images.pexels.com/photos/33653821/pexels-photo-33653821.jpeg" alt="stay-bg-Image 6">
                 </div>
             </div>
         </div>
@@ -225,12 +227,12 @@
 
         </div>
         <div class="banner-header">
-            <h1>Skill is The ultimate GOAL</h1>
+            <h1>Skill Is The ultimate GOAL</h1>
         </div>
 
         <div class="banner-intro-text-container">
             <div class="banner-intro-text">
-                <h1>Place</h1>
+                <h1>A Place</h1>
             </div>
             <div class="banner-intro-text">
                 <h1>Where</h1>
